build: add select_target_os.m4 file

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,9 +23,12 @@ include res/doxygen.am
 SUBDIRS = \
           include \
           src \
-          example \
           doc \
           res
+
+if COMPILE_SELECT_TARGET_OS_LINUX
+SUBDIRS += example
+endif
 
 # ------------------
 # defining variables
