build: update Makefile.am files

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -21,6 +21,7 @@
 # ------------------
 # defining variables
 # ------------------
+_no_error_com   =
 _include_com    =
 _sources_com    =
 _cppflags_com   =
@@ -33,12 +34,15 @@ bin_PROGRAMS    =
 # ---------------------
 # add necessary content
 # ---------------------
+_no_error_com   +=
+
 _include_com    += -I$(top_srcdir)/include
 
 _sources_com    +=
 
 _cppflags_com   += \
                    $(CPPFLAGS_COM) \
+                   $(_no_error_com) \
                    $(_include_com)
 
 _cflags_com     += $(CFLAGS_COM)
