build: add _define_com var

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -22,6 +22,7 @@
 # defining variables
 # ------------------
 _no_error_com   =
+_define_com     =
 _include_com    =
 _sources_com    =
 _cppflags_com   =
@@ -36,11 +37,13 @@ bin_PROGRAMS    =
 # ---------------------
 _no_error_com   +=
 
+_define_com     +=
+
 _include_com    += -I$(top_srcdir)/include
 
 _sources_com    +=
 
-_cppflags_com   += $(_no_error_com) $(_include_com)
+_cppflags_com   += $(_no_error_com) $(_include_com) $(_define_com)
 
 _cflags_com     +=
 
