--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,7 @@ lib_LTLIBRARIES = lib@project_name@.la
 # defining variables
 # ------------------
 _no_error_com   =
+_define_com     =
 _include_com    =
 _sources_com    =
 _cppflags_com   =
@@ -37,11 +38,13 @@ _ldadd_com      =
 # ---------------------
 _no_error_com   +=
 
+_define_com     +=
+
 _include_com    += -I$(top_srcdir)/include
 
 _sources_com    += module_a.c
 
-_cppflags_com   += $(_no_error_com) $(_include_com)
+_cppflags_com   += $(_no_error_com) $(_include_com) $(_define_com)
 
 _cflags_com     +=
 
