--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -43,7 +43,10 @@ _include_com    += -I$(top_srcdir)/include
 
 _sources_com    +=
 
-_cppflags_com   += $(_no_error_com) $(_include_com) $(_define_com)
+_cppflags_com   += \
+                   $(_no_error_com) \
+                   $(_include_com)  \
+                   $(_define_com)
 
 _cflags_com     +=
 
@@ -60,4 +63,3 @@ main_CFLAGS     = $(_cflags_com)
 main_CXXFLAGS   = $(_cxxflags_com)
 main_LDFLAGS    = $(_ldflags_com)
 main_LDADD      = $(_ldadd_com)
-
