--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,7 +44,10 @@ _include_com    += -I$(top_srcdir)/include
 
 _sources_com    += module_a.c
 
-_cppflags_com   += $(_no_error_com) $(_include_com) $(_define_com)
+_cppflags_com   += \
+                   $(_no_error_com) \
+                   $(_include_com)  \
+                   $(_define_com)
 
 _cflags_com     +=
 
@@ -62,4 +65,3 @@ lib@project_name@_la_CFLAGS     = $(_cflags_com)
 lib@project_name@_la_CXXFLAGS   = $(_cxxflags_com)
 lib@project_name@_la_LDFLAGS    = $(_ldflags_com)
 lib@project_name@_la_LIBADD     = $(_ldadd_com)
-
