refactor: refactor build.sh

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,11 +21,12 @@
 include res/doxygen.am
 
 SUBDIRS = \
-          include   \
-          src       \
-          doc       \
-          example   \
-          res
+          include       \
+          src           \
+          doc           \
+          example       \
+          res           \
+          build-script
 
 # ------------------
 # defining variables
