feat: add hy_calc.h file

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -56,10 +56,11 @@ _ldflags_com    +=
 
 _ldadd_com      += $(top_builddir)/src/lib@project_name@.la
 
-bin_PROGRAMS    += main
-main_SOURCES    = $(_sources_com) main.c
-main_CPPFLAGS   = $(_cppflags_com)
-main_CFLAGS     = $(_cflags_com)
-main_CXXFLAGS   = $(_cxxflags_com)
-main_LDFLAGS    = $(_ldflags_com)
-main_LDADD      = $(_ldadd_com)
+bin_PROGRAMS            += hy_calc_demo
+hy_calc_demo_SOURCES    = $(_sources_com) hy_calc_demo.c
+hy_calc_demo_CPPFLAGS   = $(_cppflags_com)
+hy_calc_demo_CFLAGS     = $(_cflags_com)
+hy_calc_demo_CXXFLAGS   = $(_cxxflags_com)
+hy_calc_demo_LDFLAGS    = $(_ldflags_com)
+hy_calc_demo_LDADD      = $(_ldadd_com)
+
