--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -31,7 +31,7 @@ install_includedir      = $(includedir)/@project_name@
 # ---------------------
 _no_install_headers_com +=
 
-_install_headers_com    += module_a.h
+_install_headers_com    += hy_calc.h
 
 # ------------------
 # make install files
