--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -42,7 +42,7 @@ _define_com     +=
 
 _include_com    += -I$(top_srcdir)/include
 
-_sources_com    += module_a.c
+_sources_com    += hy_calc.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
@@ -65,3 +65,4 @@ lib@project_name@_la_CFLAGS     = $(_cflags_com)
 lib@project_name@_la_CXXFLAGS   = $(_cxxflags_com)
 lib@project_name@_la_LDFLAGS    = $(_ldflags_com)
 lib@project_name@_la_LIBADD     = $(_ldadd_com)
+
