refactor: refactor build.sh

--- a/build-script/Makefile.am
+++ b/build-script/Makefile.am
@@ -5,7 +5,7 @@
 # @file    Makefile.am
 # @brief   
 # @author  gnsyxiang <gnsyxiang@163.com>
-# @date    12/03 2022 17:09
+# @date    21/03 2022 19:12
 # @version v0.0.1
 # 
 # @since    note
@@ -13,13 +13,22 @@
 # 
 #     change log:
 #     NO.     Author              Date            Modified
-#     00      zhenquan.qiu        12/03 2022      create the file
+#     00      zhenquan.qiu        21/03 2022      create the file
 # 
-#     last modified: 12/03 2022 17:09
+#     last modified: 21/03 2022 19:12
 # ===============================================================
 
-SUBDIRS = \
-          arterytek     \
-          eeasytech     \
-          pc
+if COMPILE_SELECT_VENDER_PC
+select_vender = pc
+endif
+
+if COMPILE_SELECT_VENDER_EEASYTECH
+select_vender = eeasytech
+endif
+
+if COMPILE_SELECT_VENDER_ARTERYTEK
+select_vender = arterytek
+endif
+
+SUBDIRS = $(select_vender)
 
