feat: use cunit

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,6 +25,7 @@ SUBDIRS = \
           src           \
           doc           \
           example       \
+          unit_test     \
           res           \
           build-script
 
