--- a/unit_test/Makefile.am
+++ b/unit_test/Makefile.am
@@ -41,7 +41,9 @@ _define_com     +=
 
 _include_com    += -I$(top_srcdir)/include
 
-_sources_com    +=
+_sources_com    += \
+                   hy_calc_test.c   \
+                   hy_module_test.c
 
 _cppflags_com   += \
                    $(_no_error_com) \
@@ -61,11 +63,11 @@ _include_com    += $(CUNIT_INCS)
 _ldadd_com      += $(CUNIT_LIBS)
 endif
 
-bin_PROGRAMS            += hy_calc_test
-hy_calc_test_SOURCES    = $(_sources_com) hy_calc_test.c
-hy_calc_test_CPPFLAGS   = $(_cppflags_com)
-hy_calc_test_CFLAGS     = $(_cflags_com)
-hy_calc_test_CXXFLAGS   = $(_cxxflags_com)
-hy_calc_test_LDFLAGS    = $(_ldflags_com)
-hy_calc_test_LDADD      = $(_ldadd_com)
+bin_PROGRAMS            += hy_autotools_demo_lib_test
+hy_autotools_demo_lib_test_SOURCES    = $(_sources_com) main.c
+hy_autotools_demo_lib_test_CPPFLAGS   = $(_cppflags_com)
+hy_autotools_demo_lib_test_CFLAGS     = $(_cflags_com)
+hy_autotools_demo_lib_test_CXXFLAGS   = $(_cxxflags_com)
+hy_autotools_demo_lib_test_LDFLAGS    = $(_ldflags_com)
+hy_autotools_demo_lib_test_LDADD      = $(_ldadd_com)
 
