--- a/build-script/eeasytech/Makefile.am
+++ b/build-script/eeasytech/Makefile.am
@@ -18,9 +18,5 @@
 #     last modified: 21/03 2022 19:15
 # ===============================================================
 
-if COMPILE_SELECT_CHIP_SV823
-select_chip = SV823
-endif
-
-SUBDIRS = $(select_chip)
+SUBDIRS = $(chip)
 
