--- a/build-script/arterytek/Makefile.am
+++ b/build-script/arterytek/Makefile.am
@@ -18,9 +18,5 @@
 #     last modified: 12/03 2022 17:12
 # ===============================================================
 
-if COMPILE_SELECT_CHIP_AT32F4XX
-select_chip = at32f4xx
-endif
-
-SUBDIRS = $(select_chip)
+SUBDIRS = $(chip)
 
