--- a/build-script/pc/pc-chip/Makefile.am
+++ b/build-script/pc/pc-chip/Makefile.am
@@ -35,3 +35,14 @@ _dist_file_com  += config.sh
 
 EXTRA_DIST      = $(_dist_file_com)
 
+dist-hook:
+	@echo "modify configure.ac"; \
+		\
+		sed -i 's/product=.*/product=$(product)/g' $(top_distdir)/build-script/$(vender)/$(chip)/config.sh; \
+		sed -i 's/language=.*/language=$(language)/g' $(top_distdir)/build-script/$(vender)/$(chip)/config.sh; \
+		\
+		sed -i '/build-script/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a build-script/$(vender)/$(chip)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a build-script/$(vender)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a build-script/Makefile' $(top_distdir)/configure.ac
+
