build: add export include_com and ldadd_com

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -23,7 +23,7 @@
 # ------------------
 _no_error_com   =
 _define_com     =
-_include_com    =
+_include_com    = $(include_com)
 _sources_com    =
 _cppflags_com   =
 _cflags_com     =
@@ -54,7 +54,9 @@ _cxxflags_com   +=
 
 _ldflags_com    +=
 
-_ldadd_com      += $(top_builddir)/src/lib@project_name@.la
+_ldadd_com      += \
+                   $(top_builddir)/src/lib@project_name@.la \
+                   $(ldadd_com)
 
 bin_PROGRAMS            += hy_calc_demo
 hy_calc_demo_SOURCES    = $(_sources_com) hy_calc_demo.c
