--- a/Makefile.am
+++ b/Makefile.am
@@ -34,8 +34,19 @@ SUBDIRS = \
 # ------------------
 _install_files_com  =
 _dist_files_com     =
+include_com         =
+ldadd_com           =
 
 ACLOCAL_AMFLAGS     = -I m4
+include_com         += $(ACLOCAL_AMFLAGS)
+
+if COMPILE_LIBCUNIT
+include_com         += $(CUNIT_INCS)
+ldadd_com           += $(CUNIT_LIBS)
+endif
+
+export include_com
+export ldadd_com 
 
 # ---------------------
 # add necessary content
