--- a/res/Makefile.am
+++ b/res/Makefile.am
@@ -18,6 +18,9 @@
 #     last modified: 08/03 2021 08:16
 # ===============================================================
 
+SUBDIRS = \
+          voice
+
 # ------------------
 # defining variables
 # ------------------
