build: fix voice buf in 'make dist'

--- a/build-script/arterytek/at32f4xx/Makefile.am
+++ b/build-script/arterytek/at32f4xx/Makefile.am
@@ -44,5 +44,9 @@ dist-hook:
 		sed -i '/build-script/d' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/$(vender)/$(chip)/Makefile' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/$(vender)/Makefile' $(top_distdir)/configure.ac; \
-		sed -i '/project_name.pc/a build-script/Makefile' $(top_distdir)/configure.ac
+		sed -i '/project_name.pc/a build-script/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/res\/voice/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a res/voice/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a res/voice/$(language)/Makefile' $(top_distdir)/configure.ac
 
