build: update debug rule

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -55,9 +55,11 @@ _cflags_com     +=
 
 _cxxflags_com   +=
 
-_ldflags_com    += \
-                   -export-symbols-regex 'Hy*'                  \
-                   -version-info @current@:@revision@:@age@
+_ldflags_com    += -version-info @current@:@revision@:@age@
+
+if !COMPILE_DEBUG_INFO
+_ldflags_com    += -export-symbols-regex 'Hy*'
+endif
 
 _ldadd_com      += $(ldadd_com)
 
