--- a/config.h.in
+++ b/config.h.in
@@ -34,6 +34,9 @@
 /* select rk3568 chip */
 #undef HAVE_SELECT_CHIP_RK3568
 
+/* select stm32h743 chip */
+#undef HAVE_SELECT_CHIP_STM32H743
+
 /* select SV823 chip */
 #undef HAVE_SELECT_CHIP_SV823
 
@@ -63,6 +66,9 @@
 
 /* select rock-chips vender */
 #undef HAVE_SELECT_VENDER_ROCK_CHIPS
+
+/* select stm32 vender */
+#undef HAVE_SELECT_VENDER_STM32
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
