--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -18,25 +18,4 @@
 #     last modified: 05/03 2021 10:35
 # ===============================================================
 
-# ------------------
-# defining variables
-# ------------------
-_no_install_headers_com =
-_install_headers_com    =
-
-install_includedir      = $(includedir)/@project_name@
-
-# ---------------------
-# add necessary content
-# ---------------------
-_no_install_headers_com +=
-
-_install_headers_com    += \
-                           hy_calc.h    \
-                           hy_module.h
-
-# ------------------
-# make install files
-# ------------------
-noinst_HEADERS          = $(_no_install_headers_com)
-install_include_HEADERS = $(_install_headers_com)
+SUBDIRS = $(run_os)
