--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,55 +18,4 @@
 #     last modified: 05/03 2021 10:35
 # ===============================================================
 
-lib_LTLIBRARIES = lib@project_name@.la
-
-# ------------------
-# defining variables
-# ------------------
-_no_error_com   =
-_define_com     =
-_include_com    = $(include_com)
-_sources_com    =
-_cppflags_com   =
-_cflags_com     =
-_cxxflags_com   =
-_ldflags_com    =
-_ldadd_com      =
-
-# ---------------------
-# add necessary content
-# ---------------------
-_no_error_com   +=
-
-_define_com     +=
-
-_include_com    += -I$(top_srcdir)/include
-
-_sources_com    += \
-                   hy_calc.c    \
-                   hy_module.c
-
-_cppflags_com   += \
-                   $(_no_error_com) \
-                   $(_include_com)  \
-                   $(_define_com)
-
-_cflags_com     +=
-
-_cxxflags_com   +=
-
-_ldflags_com    += -version-info @current@:@revision@:@age@
-
-if !COMPILE_DEBUG_INFO
-_ldflags_com    += -export-symbols-regex 'Hy*'
-endif
-
-_ldadd_com      += $(ldadd_com)
-
-lib@project_name@_la_SOURCES    = $(_sources_com)
-lib@project_name@_la_CPPFLAGS   = $(_cppflags_com)
-lib@project_name@_la_CFLAGS     = $(_cflags_com)
-lib@project_name@_la_CXXFLAGS   = $(_cxxflags_com)
-lib@project_name@_la_LDFLAGS    = $(_ldflags_com)
-lib@project_name@_la_LIBADD     = $(_ldadd_com)
-
+SUBDIRS = $(run_os)
