--- a/build-script/pc/windows/Makefile.am
+++ b/build-script/pc/windows/Makefile.am
@@ -41,12 +41,32 @@ dist-hook:
 		sed -i 's/product=.*/product=$(product)/g' $(top_distdir)/build-script/$(vender)/$(chip)/config.sh; \
 		sed -i 's/language=.*/language=$(language)/g' $(top_distdir)/build-script/$(vender)/$(chip)/config.sh; \
 		\
+		sed -i '/test/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a test/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a test/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/res/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a res/voice/$(language)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a res/voice/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a res/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/src/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a src/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a src/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/include/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a include/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a include/Makefile' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/example/d' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a example/$(run_os)/Makefile' $(top_distdir)/configure.ac; \
+		sed -i '/project_name.pc/a example/Makefile' $(top_distdir)/configure.ac; \
+		\
 		sed -i '/build-script/d' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/$(vender)/$(chip)/Makefile' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/$(vender)/Makefile' $(top_distdir)/configure.ac; \
 		sed -i '/project_name.pc/a build-script/Makefile' $(top_distdir)/configure.ac; \
 		\
-		sed -i '/res\/voice/d' $(top_distdir)/configure.ac; \
-		sed -i '/project_name.pc/a res/voice/Makefile' $(top_distdir)/configure.ac; \
-		sed -i '/project_name.pc/a res/voice/$(language)/Makefile' $(top_distdir)/configure.ac
-
+		sed -i 's/doc\/Makefile/doc\/Makefile])/g' $(top_distdir)/configure.ac; \
+		\
+		sed -i '/AC_INIT/i m4_include([m4/check_project_info.m4])' $(top_distdir)/configure.ac
